// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddOnListItem 1`] = `
<div>
  <a
    class="addon-link svelte-zccvfh"
    href="/add-ons/MuckRock/documentcloud-bulk-edit-addon/"
  >
    <div
      class="container svelte-zccvfh"
      id="MuckRock/documentcloud-bulk-edit-addon"
    >
      <div
        class="row svelte-zccvfh"
      >
        <div
          class="center-self svelte-zccvfh"
        >
          <div
            style="display: contents; --fill: var(--gray-3);"
          >
            <button
              class="pin svelte-ne3jki"
              style="--padding:0.25em; --border-radius:4px;"
            >
              <svg
                class="svelte-yezalu"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <title>
                  Click to Pin
                </title>
                <path
                  d="M3.00220543,1 C3.00220543,0.446875 3.44891524,0 4.00183577,0 L11.9988785,0 C12.551799,0 12.9985088,0.446875 12.9985088,1 C12.9985088,1.553125 12.551799,2 11.9988785,2 L11.0773442,2 L11.4334625,6.63125 C12.5799136,7.253125 13.4858286,8.29375 13.9169192,9.590625 L13.9481576,9.684375 C14.0512445,9.990625 13.9981391,10.325 13.8107084,10.584375 C13.6232777,10.84375 13.3202648,11 12.9985088,11 L3.00220543,11 C2.68044942,11 2.38056032,10.846875 2.19000578,10.584375 C1.99945125,10.321875 1.94946973,9.9875 2.05255661,9.684375 L2.08379506,9.590625 C2.51488564,8.29375 3.42080063,7.253125 4.56725167,6.63125 L4.92336998,2 L4.00183577,2 C3.44891524,2 3.00220543,1.553125 3.00220543,1 Z M7.00072677,12 L8.99998744,12 L8.99998744,15 C8.99998744,15.553125 8.55327764,16 8.00035711,16 C7.44743658,16 7.00072677,15.553125 7.00072677,15 L7.00072677,12 Z"
                  fill-rule="nonzero"
                />
              </svg>
            </button>
          </div>
        </div>
         
        <div
          class="stretch svelte-zccvfh"
        >
          <h3
            class="addon-name svelte-zccvfh"
          >
            Bulk Edit
          </h3>
        </div>
         
        <div
          class="metadata svelte-zccvfh"
        >
          <p
            class="author svelte-zccvfh"
          >
            <a
              class="svelte-zccvfh"
              href="http://github.com/MuckRock/documentcloud-bulk-edit-addon"
              rel="noopener noreferrer"
              target="_blank"
              title="View Source"
            >
              MuckRock
            </a>
          </p>
           
        </div>
      </div>
       
      <div
        class="description svelte-zccvfh"
      >
        This will update document information for all documents in your current search.  Please be sure you have edit access to these documents before running this add-on.
      </div>
    </div>
  </a>
</div>
`;

exports[`AddOnListItem 2`] = `
<div>
  <a
    class="addon-link svelte-zccvfh"
    href="/add-ons/MuckRock/documentcloud-azure-document-intelligence-ocr-addon/"
  >
    <div
      class="container svelte-zccvfh"
      id="MuckRock/documentcloud-azure-document-intelligence-ocr-addon"
    >
      <div
        class="row svelte-zccvfh"
      >
        <div
          class="center-self svelte-zccvfh"
        >
          <div
            style="display: contents; --fill: var(--gray-3);"
          >
            <button
              class="pin svelte-ne3jki"
              style="--padding:0.25em; --border-radius:4px;"
            >
              <svg
                class="svelte-yezalu"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <title>
                  Click to Pin
                </title>
                <path
                  d="M3.00220543,1 C3.00220543,0.446875 3.44891524,0 4.00183577,0 L11.9988785,0 C12.551799,0 12.9985088,0.446875 12.9985088,1 C12.9985088,1.553125 12.551799,2 11.9988785,2 L11.0773442,2 L11.4334625,6.63125 C12.5799136,7.253125 13.4858286,8.29375 13.9169192,9.590625 L13.9481576,9.684375 C14.0512445,9.990625 13.9981391,10.325 13.8107084,10.584375 C13.6232777,10.84375 13.3202648,11 12.9985088,11 L3.00220543,11 C2.68044942,11 2.38056032,10.846875 2.19000578,10.584375 C1.99945125,10.321875 1.94946973,9.9875 2.05255661,9.684375 L2.08379506,9.590625 C2.51488564,8.29375 3.42080063,7.253125 4.56725167,6.63125 L4.92336998,2 L4.00183577,2 C3.44891524,2 3.00220543,1.553125 3.00220543,1 Z M7.00072677,12 L8.99998744,12 L8.99998744,15 C8.99998744,15.553125 8.55327764,16 8.00035711,16 C7.44743658,16 7.00072677,15.553125 7.00072677,15 L7.00072677,12 Z"
                  fill-rule="nonzero"
                />
              </svg>
            </button>
          </div>
        </div>
         
        <div
          class="stretch svelte-zccvfh"
        >
          <h3
            class="addon-name svelte-zccvfh"
          >
            Azure Document Intelligence OCR
          </h3>
        </div>
         
        <div
          class="metadata svelte-zccvfh"
        >
          <p
            class="author svelte-zccvfh"
          >
            <a
              class="svelte-zccvfh"
              href="http://github.com/MuckRock/documentcloud-azure-document-intelligence-ocr-addon"
              rel="noopener noreferrer"
              target="_blank"
              title="View Source"
            >
              MuckRock
            </a>
          </p>
           
          <span
            class="badge svelte-zccvfh"
            role="status"
          >
            <div
              class="badge svelte-1o24gyr"
              style="--badge-color: transparent; --label-color: var(--premium);"
            >
              <span
                class="icon svelte-1o24gyr"
              >
                <svg
                  class="svelte-13bl109"
                  height="16px"
                  viewBox="0 0 16 16"
                  width="16px"
                >
                  <title>
                    Premium
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M7 1C7 3.76142 4.76142 6 2 6C4.76142 6 7 8.23858 7 11C7 8.23858 9.23858 6 12 6C9.23858 6 7 3.76142 7 1Z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11 9C11 10.6569 9.65685 12 8 12C9.65685 12 11 13.3431 11 15C11 13.3431 12.3431 12 14 12C12.3431 12 11 10.6569 11 9Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              <span
                class="label svelte-1o24gyr"
              >
                Premium
              </span>
            </div>
          </span>
        </div>
      </div>
       
      <div
        class="description svelte-zccvfh"
      >
        <p>
          This Add-On uses Azure’s Document Intelligence API to OCR documents. The document(s) must be public to be processed. This Add-On uses 1 AI Credit per page.
        </p>
      </div>
    </div>
  </a>
</div>
`;
